--- a/src/src.vcxproj
+++ b/src/src.vcxproj
@@ -133,7 +133,21 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Audio.cpp" />
+    <ClCompile Include="GameFunction.cpp" />
+    <ClCompile Include="MatrixStack.cpp" />
     <ClCompile Include="src.cpp" />
+    <ClCompile Include="Time.cpp" />
+    <ClCompile Include="TopPlayer.cpp" />
+    <ClCompile Include="User.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Audio.h" />
+    <ClInclude Include="GameFunction.h" />
+    <ClInclude Include="MatrixStack.h" />
+    <ClInclude Include="Time.h" />
+    <ClInclude Include="TopPlayer.h" />
+    <ClInclude Include="User.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
