--- a/src/src.vcxproj.filters
+++ b/src/src.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="Mutex.h">
       <Filter>Header Files</Filter>
     </ClCompile>
+    <ClCompile Include="Mutex.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MatrixStack.h">
